--- a/docx/项目设计/上线前的工作.md
+++ b/docx/项目设计/上线前的工作.md
@@ -18,17 +18,23 @@
 
 接入后端wiki附件
 
+**已经完成**
+
 
 
 ### 项目私有修改
 
 能在项目广场看到自己的私有项目
 
+**已经完成**
+
 
 
 ### 能查看别人的个人信息
 
 点进项目中能查看成员的个人信息
+
+**已经完成**
 
 
 
@@ -77,3 +83,9 @@
 ### 操作日志重构
 
 重构操作日志，并且不要登录日志
+
+
+
+### 归档项目锁死
+
+归档项目内的按钮全部失效，不能操作
