添加了修改邮箱

--- a/docx/项目设计/上线前的工作.md
+++ b/docx/项目设计/上线前的工作.md
@@ -54,11 +54,15 @@
 
 能够修改个人简介
 
+**已经完成**
+
 
 
 ### 修改邮箱添加
 
 后端接口可用，但是前端没有位置
+
+**已经完成**
 
 
 
@@ -72,6 +76,8 @@
 
 项目总览看不到私有项目
 
+**已经完成**
+
 
 
 ### 添加页脚
@@ -84,8 +90,12 @@
 
 重构操作日志，并且不要登录日志
 
+**后端已经完成**
+
 
 
 ### 归档项目锁死
 
 归档项目内的按钮全部失效，不能操作
+
+**已经完成**
