修改消息的删除逻辑，并且添加清除全部已读

--- a/docx/项目设计/上线前的工作.md
+++ b/docx/项目设计/上线前的工作.md
@@ -1,18 +1,18 @@
 ## 待办
+
 ### 项目申请
+
 前端需要有对应的位置
 
 后端复用邀请的逻辑。只不过反过来
 
 **已经完成**
 
-
-
 ### 日历
 
 点击日历上的日志能看该日任务
 
-
+**已经完成**
 
 ### Wiki附件接入
 
@@ -20,23 +20,17 @@
 
 **已经完成**
 
-
-
 ### 项目私有修改
 
 能在项目广场看到自己的私有项目
 
 **已经完成**
 
-
-
 ### 能查看别人的个人信息
 
 点进项目中能查看成员的个人信息
 
 **已经完成**
-
-
 
 ### 夜间模式添加
 
@@ -48,15 +42,11 @@
 
 样式中也有很多夜间模式的问题
 
-
-
 ### 个人简介修复
 
 能够修改个人简介
 
 **已经完成**
-
-
 
 ### 修改邮箱添加
 
@@ -64,13 +54,9 @@
 
 **已经完成**
 
-
-
 ### 项目广场内显示项目所属组织
 
 项目广场内显示项目所属组织，现在只能显示创建者，团队规模，项目周期
-
-
 
 ### 项目总览看不到私有项目
 
@@ -78,13 +64,9 @@
 
 **已经完成**
 
-
-
 ### 添加页脚
 
 添加页脚，添加联系性信息和备案信息
-
-
 
 ### 操作日志重构
 
@@ -92,10 +74,18 @@
 
 **后端已经完成**
 
-
-
 ### 归档项目锁死
 
 归档项目内的按钮全部失效，不能操作
 
 **已经完成**
+
+### 删除全部已读消息
+
+消息部分添加一个删除全部已读消息功能，后端已经实现
+
+### 修改任务审核的部分样式
+
+通过审核和拒绝通过审核的样式修改
+
+拒绝审核需要必须填写审核意见
