请求响应加密模块完成

--- a/docx/项目内其他说明文档/上线前的工作.md
+++ b/docx/项目内其他说明文档/上线前的工作.md
@@ -72,7 +72,7 @@
 
 重构操作日志，并且不要登录日志
 
-**后端已经完成**
+**已经完成**
 
 ### 归档项目锁死
 
@@ -84,6 +84,14 @@
 
 消息部分添加一个删除全部已读消息功能，后端已经实现
 
+**已经完成**
+
+### 个人信息部分支持链接绑定
+
+个人信息可以绑定自己的个人其他的社交链接
+
+**已经完成**
+
 ### 修改任务审核的部分样式
 
 通过审核和拒绝通过审核的样式修改
@@ -92,4 +100,8 @@
 
 ### 提供用户绑定ORCID科研名片
 
-与ORCID连接，个人信息部分添加ORCID科研名片的信息，用户可跳转到ORCID绑定和填写信息，平台会获取到
+与ORCID连接，个人信息部分添加ORCID科研名片的信息，平台会获取到
+
+调整为上线之后做
+
+上线之后在做ORCID的第三方登录，然后在个人信息的位置添加ORCID的信息
