当日汇总性提交

--- a/docx/项目内其他说明文档/上线前的工作.md
+++ b/docx/项目内其他说明文档/上线前的工作.md
@@ -42,6 +42,8 @@
 
 样式中也有很多夜间模式的问题
 
+**基本完成**
+
 ### 个人简介修复
 
 能够修改个人简介
@@ -74,9 +76,7 @@
 
 **已经完成**
 
-### 归档项目锁死
-
-归档项目内的按钮全部失效，不能操作
+### 归档项目锁死归档项目内的按钮全部失效，不能操作
 
 **已经完成**
 
@@ -98,6 +98,8 @@
 
 拒绝审核需要必须填写审核意见
 
+**完成**
+
 ### 提供用户绑定ORCID科研名片
 
 与ORCID连接，个人信息部分添加ORCID科研名片的信息，平台会获取到
@@ -105,3 +107,18 @@
 调整为上线之后做
 
 上线之后在做ORCID的第三方登录，然后在个人信息的位置添加ORCID的信息
+
+### 日历日期带任务相关的颜色标注
+
+
+
+### 优化页面交互
+
+
+
+### 优化弹窗遮罩
+
+
+
+### 编写项目说明文档
+
