完善缺失的提醒类消息业务

--- a/docx/项目内其他说明文档/上线前的工作.md
+++ b/docx/项目内其他说明文档/上线前的工作.md
@@ -110,15 +110,18 @@
 
 ### 日历日期带任务相关的颜色标注
 
-
-
 ### 优化页面交互
 
-
+知识库的成果目录管理中，添加新成果弹出的输入框，若点击到框体外就会输入框就会消失，容易丢失输入，体验很不好
 
 ### 优化弹窗遮罩
 
-
-
 ### 编写项目说明文档
 
+### 自定义项目类型依旧没有办法正确上传文件
+
+上传文件后并且保存成果，会提示成果内0个文件，且成果没有被保存
+
+### OAuth2回调地址修改
+
+上线之后，OAuth2的回调地址需要修改
